plugins {
	id 'fabric-loom' version '1.7-SNAPSHOT'
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	maven {
		url = "https://cursemaven.com"
	}

	maven {
		name = "Modrinth"
		url = "https://api.modrinth.com/maven"
	}

	maven {
		url = "https://maven.kyrptonaught.dev"
	}

	maven {
		url = "https://maven.repository.redhat.com/ga/"
	}

	maven {
		url = "https://s01.oss.sonatype.org/content/repositories/snapshots"
	}

	flatDir {
		dirs 'libs'
	}
}

fabricApi {
	configureDataGeneration()
}

loom {

	runs {
		server {
			runDir = "run-server"
		}
	}

    splitEnvironmentSourceSets()

	mods {
		"mtwmod" {
			sourceSet sourceSets.main
			sourceSet sourceSets.client
		}
	}

	accessWidenerPath = file("src/main/resources/mtwmod.accesswidener")
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

	// Implementation
	for (String mod : [
			project.modmenu_version,
			project.voicechat_version,
			project.command_macros_version,
			project.better_third_person_version,
			project.modernkeybinding_verson
	]) {
		modImplementation "maven.modrinth:$mod"
	}

	// Compile Only
	for (String mod : [
			project.axiom_version,
			project.command_block_ide_version,
			project.pehkui_version
	]) {
		modCompileOnly "maven.modrinth:$mod"
	}

	modCompileOnly "maven.modrinth:better-suggestions:1.2.7.1"

	modRuntimeOnly "dev.mtwmod:mtwmod-resource:1.0.5"
	modCompileOnly "dev.mtwmod:kyrptconfig:1.5.6-1.20"

	include implementation("dnsjava:dnsjava:3.5.3")
}

processResources {
	//dependsOn ":mtw-resource:processResources"

	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 17
}

java {
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.base.archivesName.get()}"}
	}
}